# Hackathon-2

./: .dockerignore  .env.example  PHASE_MANAGEMENT.md  docker-compose.yml  manage_phases.bat  manage_phases.ps1  manage_phases.sh
phase_2/: .env.example  (+4 more)
phase_3/backend/: =4.0.0  CRASH_TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  Procfile  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VERCEL_README.md  alembic.ini  api.py  app.py  app_crash_fix.py  app_resilient.py  app_serverless_crash_fix.py  generate_schema.py  main.py  minimal_app.py  pyproject.toml  recover_from_crash.sh  requirements-vercel.txt  requirements.txt  run_server.py  serverless_stable.py  super_minimal_app.py  test_bcrypt.py  test_chat_agent.py  todo_chat.db  update_schema.py  vercel.json  vercel_api.py  vercel_app.py  vercel_main_simple.py
phase_3/backend/alembic/: env.py
phase_3/backend/app/: database.py  main.py  main_with_socketio.py
phase_3/backend/app/agents/: todo_agent.py
phase_3/backend/app/chat/: routes.py  socketio_server.py
phase_3/backend/app/db/: database.py
phase_3/backend/app/mcp/: server.py  tools.py
phase_3/backend/app/models/: __init__.py  conversation.py  item.py  message.py  session.py  task.py  user.py
phase_3/backend/app/schemas/: user.py
phase_3/backend/src/agents/: chat_agent.py
phase_3/backend/src/api/: auth.py  chat.py  chatkit_agent.py  dashboard.py  main.py  tasks.py
phase_3/backend/src/auth/: __init__.py
phase_3/backend/tests/: test_auth_flow_e2e.py  test_chat_api.py  test_error_handling.py  test_jwt_integration.py  test_jwt_validation.py
(+591 files in other folders)
