[tool.poetry]
name = "ai-todo-chatbot-backend"
version = "1.0.0"
description = "AI-Powered Todo Chatbot Backend API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlmodel = "0.0.16"
pydantic = "^2.5.0"
python-multipart = "0.0.6"
better-exceptions = "0.3.3"
alembic = "1.13.1"
openai = "1.3.7"
python-dotenv = "1.0.0"
pydantic-settings = "2.1.0"
cryptography = "^41.0.0"
bcrypt = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn src.api.main:app --host 0.0.0.0 --port $PORT"